# LOAM-CAM-Fusion-ObjectClassifier

./: README.md  data_study
A-LOAM/src/: scanRegistration.cpp
create_data/: CMakeLists.txt  package.xml
create_data/sdf/: block.sdf
create_data/src/: run.py  run_creat_data.py
lidar_camera_calibration_test/: CMakeLists.txt  package.xml
lidar_camera_calibration_test/src/: cv2_test_node.py  lidar_camera_calibration.py
mach_learn/: CMakeLists.txt  package.xml
mach_learn/src/: knn_run.py  pcl_cnn_run.py
pointcombine/: CMakeLists.txt  package.xml
pointcombine/launch/: run.launch  run_creat_data.launch
pointcombine/src/: com1.py  com2.py  com3.py  com3_topic_pub.py
turtlebot3_velodyne/turtlebot3_velodyne_description/urdf/: turtlebot3_burger.urdf.xacro
turtlebot3_velodyne/turtlebot3_velodyne_gazebo/worlds/: empty.world
