<?xml version="1.0"?>
<package format="2">
  <name>pointcombine</name>
  <version>0.0.0</version>
  <description>The pointcombine package</description>

  <!-- Maintainer information -->
  <maintainer email="kriso@todo.todo">kriso</maintainer>

  <!-- License information -->
  <license>BSD</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Runtime and build dependencies -->
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
  
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <build_depend>nav_msgs</build_depend>
  <exec_depend>nav_msgs</exec_depend>

  <build_depend>tf</build_depend>
  <exec_depend>tf</exec_depend>

  <!-- Export section -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
